[gd_scene load_steps=14 format=3 uid="uid://dpfjl1hb0313u"]

[ext_resource type="Script" path="res://Units/mele_units/mele_unit.gd" id="1_sfj4p"]
[ext_resource type="Texture2D" uid="uid://ch2v2c6l7ume" path="res://Units/img/unit_body.png" id="2_c8gmb"]
[ext_resource type="Texture2D" uid="uid://betvqvc8rlol0" path="res://Units/img/unit_head.png" id="3_70it2"]
[ext_resource type="Texture2D" uid="uid://ba4e6kj25no2k" path="res://Units/img/mele_weapons/mele_weapon_0.png" id="4_otxmx"]
[ext_resource type="PackedScene" uid="uid://b66twah3ba66x" path="res://Units/Usables/health_bar.tscn" id="5_gl100"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_jvusy"]
friction = 0.01

[sub_resource type="CircleShape2D" id="CircleShape2D_rnb5y"]
radius = 29.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2vdy1"]
radius = 65.0077

[sub_resource type="Animation" id="Animation_t5bss"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Side/Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(30, 10)]
}

[sub_resource type="Animation" id="Animation_kucyg"]
resource_name = "punch"
length = 0.9
step = 0.05
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.45),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Side/Hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.45, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(30, 10), Vector2(10, 5), Vector2(60, 5), Vector2(30, 10)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7yia0"]
_data = {
"RESET": SubResource("Animation_t5bss"),
"punch": SubResource("Animation_kucyg")
}

[sub_resource type="Animation" id="Animation_nbjvf"]
resource_name = "hit"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Side:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.227451, 0.32549, 0.729412), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nu4g3"]
_data = {
"hit": SubResource("Animation_nbjvf")
}

[node name="MeleUnitRigid" type="RigidBody2D"]
z_index = 3
mass = 60.0
physics_material_override = SubResource("PhysicsMaterial_jvusy")
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_sfj4p")

[node name="Side" type="Sprite2D" parent="."]

[node name="Body" type="Sprite2D" parent="Side"]
position = Vector2(0, 22)
texture = ExtResource("2_c8gmb")

[node name="Head" type="Sprite2D" parent="Side"]
position = Vector2(0, -36)
texture = ExtResource("3_70it2")

[node name="Hand" type="Sprite2D" parent="Side"]
position = Vector2(30, 10)
texture = ExtResource("4_otxmx")

[node name="UnitSpace" type="CollisionShape2D" parent="."]
position = Vector2(0, 37)
rotation = 1.5708
shape = SubResource("CircleShape2D_rnb5y")

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 3
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_2vdy1")
debug_color = Color(0.909804, 0.266667, 0.356863, 0.219608)
metadata/_edit_lock_ = true

[node name="Fight" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" parent="." instance=ExtResource("5_gl100")]
offset_left = -37.0
offset_top = -87.0
offset_right = 111.0
offset_bottom = -53.0

[node name="HandAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7yia0")
}

[node name="OtherAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nu4g3")
}

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_hit_box_area_exited"]
[connection signal="timeout" from="Fight" to="." method="_on_fight_timeout"]
